--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lucide-react": "^0.274.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.11.0",
     "react-phone-number-input": "^3.2.19",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
