--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fontsource/lato": "^5.0.11",
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.14",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@yext/components-tsx-maps": "^1.0.11",
@@ -35,6 +36,7 @@
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "lucide-react": "^0.274.0",
+    "radix-ui": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.11.0",
