--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@yext/search-headless-react": "^2.3.0",
     "@yext/search-ui-react": "^1.3.0",
     "@yext/sites-components": "^1.0.0-rc.2",
+    "@yext/sites-react-components": "^0.1.17-beta.2",
+    "@yext/types": "^0.1.12-alpha",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
