--- a/package.json
+++ b/package.json
@@ -43,12 +43,15 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.11.0",
     "react-phone-number-input": "^3.2.19",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^17.0.49",
     "@types/react-dom": "^17.0.17",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "@vitejs/plugin-react": "^3.1.0",
