--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@yext/chat-headless-react": "^0.6.1",
+    "@yext/chat-ui-react": "^0.7.2",
     "@yext/components-tsx-maps": "^1.0.11",
     "@yext/react-components": "^0.0.6",
     "@yext/search-headless-react": "^2.3.0",
