--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "@yext/chat-ui-react": "^0.7.2",
     "@yext/components-tsx-maps": "^1.0.11",
     "@yext/react-components": "^0.0.6",
-    "@yext/search-headless-react": "^2.3.0",
-    "@yext/search-ui-react": "^1.3.0",
-    "@yext/sites-components": "^1.0.0-rc.2",
-    "@yext/sites-react-components": "^0.1.17-beta.2",
-    "@yext/types": "^0.1.12-alpha",
+    "@yext/search-headless-react": "^2.3.2",
+    "@yext/search-ui-react": "^1.3.4",
+    "@yext/sites-components": "1.0.0-rc.5",
+    "@yext/sites-react-components": "0.1.17-beta.2",
+    "@yext/types": "0.1.12-alpha",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
@@ -68,6 +68,6 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3",
-    "vite": "^4.1.1"
+    "vite": "^4.4.11"
   }
 }
