--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^17.0.49",
     "@types/react-dom": "^17.0.17",
     "@types/react-slick": "^0.23.10",
