--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@yext/chat-ui-react": "^0.11.4",
     "@yext/search-ui-react": "^1.6.4",
     "classnames": "^2.5.1",
+    "markdown-to-jsx": "^7.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
