--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-phone-number-input": "^3.4.8",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/mapbox-gl": "^3.4.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "@vitejs/plugin-react": "^4.2.1",
