--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "@yext/analytics": "^0.6.6",
+    "@yext/chat-headless-react": "^0.9.2",
     "@yext/chat-ui-react": "^0.11.4",
     "@yext/search-ui-react": "^1.6.4",
     "classnames": "^2.5.1",
