--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@yext/chat-headless-react": "^0.9.2",
     "@yext/chat-ui-react": "^0.11.4",
     "@yext/search-ui-react": "^1.6.4",
+    "@yext/types": "^0.1.13-alpha",
     "classnames": "^2.5.1",
     "markdown-to-jsx": "^7.5.0",
     "react": "^18.3.1",
