--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@yext/analytics": "^0.6.6",
     "@yext/chat-headless-react": "^0.9.2",
     "@yext/chat-ui-react": "^0.11.4",
+    "@yext/search-headless-react": "^2.4.1",
     "@yext/search-ui-react": "^1.6.4",
     "@yext/types": "^0.1.13-alpha",
     "classnames": "^2.5.1",
@@ -30,7 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-     "react-phone-number-input": "^3.4.8",
+    "react-phone-number-input": "^3.4.8",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2"
