fixed root and updated package

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@yext/analytics": "^0.6.6",
     "@yext/chat-headless-react": "^0.9.2",
     "@yext/chat-ui-react": "^0.11.4",
-    "@yext/search-headless-react": "^2.4.1",
-    "@yext/search-ui-react": "^1.6.4",
+    "@yext/search-headless-react": "^2.5.0-beta.5",
+    "@yext/search-ui-react": "^1.7.0-beta.8",
     "@yext/types": "^0.1.13-alpha",
     "classnames": "^2.5.1",
     "markdown-to-jsx": "^7.5.0",
